# ward

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  install.sh  osv-scanner.toml
.github/: CODEOWNERS  CONTRIBUTORS.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  expected-ruleset.json  labels.json  workflow-hygiene.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-label.yml  auto-update-pr.yml  betterleaks.yml  cargo-audit.yml  ci.yml  cla-dco.yml  clean-workflow.yml  dependabot-auto-merge.yml  license.yml  lock.yml  osv-scan.yml  release.yml  ruleset-apply.yml  ruleset-drift.yml  scorecard.yml  stale.yml  vendor-libkrun.yml  workflow-hygiene.yml
docs/: SPEC.md  WARD-DAEMON-SPEC.md  architecture.md  platforms.md  positioning.md  rootless.md  status.md  why.md  workspace.md
docs/adr/: 001-project-scope.md  002-language.md  003-isolation-backend.md  004-ipc-protocol.md  005-sdk-strategy.md  006-licensing.md  007-platform-support.md  008-egress-control.md  009-snapshots.md  010-shared-volumes.md  011-cross-sandbox-comms.md  012-backend-trait.md  013-multi-tenant-auth.md  014-wasm-backend.md  015-live-migration.md  016-embedded-mode-microvms.md  017-license-posture.md  018-rootless-networking.md
docs/sessions/: 2026-05-29-slsa-l3-rollout.md
docs/superpowers/plans/: 2026-05-24-pr1-krunvm-ci.md
docs/superpowers/specs/: 2026-05-24-backend-completion-design.md
examples/ai-agent-sandbox/: README.md  run-untrusted.sh
proto/: ward.proto  ward_agent.proto
scripts/: diff-libkrun.sh
sdks/go/: README.md  client.go  go.mod
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/tests/: test_smoke.py
sdks/python/ward_sdk/: __init__.py  client.py
sdks/rust/ward-client/: Cargo.toml  README.md  build.rs
sdks/rust/ward-client/src/: lib.rs
sdks/rust/ward-client/tests/: e2e.rs
sdks/typescript/: .gitignore  README.md  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts
ward-agent/: Cargo.toml  build.rs
ward-agent/src/: lib.rs  main.rs
ward-cli/: Cargo.toml
ward-cli/src/: client.rs  main.rs  output.rs  socket.rs
ward-core/: Cargo.toml  build.rs
ward-core/src/: config.rs  lib.rs  protocol.rs  validate.rs
ward-core/src/backend/: agent.rs  image.rs  krun_ffi.rs  krunvm.rs  mod.rs
ward-core/src/comms/: broker.rs  mod.rs
ward-core/src/egress/: mod.rs  proxy.rs
ward-core/src/grpc/: mod.rs  server.rs
ward-core/src/sandbox/: manager.rs  mod.rs
ward-core/src/volume/: manager.rs  mod.rs
ward-core/tests/: grpc_comms.rs  grpc_egress.rs  grpc_exec.rs  grpc_sandbox.rs  grpc_snapshot.rs  grpc_validation.rs  grpc_volume.rs  krun_boot.rs  smoke.rs
ward-core/tests/common/: mod.rs
ward-daemon/: Cargo.toml
ward-daemon/src/: main.rs
ward-daemon/tests/: e2e_comms.rs  e2e_exec.rs  e2e_info.rs  e2e_output_modes.rs  e2e_sandbox.rs  e2e_shutdown.rs  e2e_snapshot.rs  e2e_volume.rs
ward-daemon/tests/common/: mod.rs
ward-guest-agent/: Cargo.toml
ward-guest-agent/src/: lib.rs  main.rs
ward-mcp/: Cargo.toml
ward-mcp/src/: main.rs  rpc.rs
ward-mcp/tests/: handshake.rs  tool_calls.rs
ward-net/: Cargo.toml
ward-net/src/: gvproxy.rs  lib.rs  null.rs  passt.rs  smoltcp_backend.rs
ward-net/tests/: gvproxy_spawn.rs  passt_spawn.rs
ward-proto/: Cargo.toml  build.rs
ward-proto/src/: lib.rs
ward-runtime/: Cargo.toml
ward-runtime/src/: lib.rs
ward-runtime/tests/: lifecycle.rs
wardd/: Cargo.toml
wardd/src/: main.rs
wardd/tests/: e2e_exec.rs  e2e_sandbox.rs  e2e_snapshot.rs  e2e_volume.rs
wardd/tests/common/: mod.rs
