[workspace]
resolver = "2"
members = [
  "sdks/rust/ward-client",
    "ward-daemon",
    "ward-cli",
    "ward-core",
    "ward-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Igor <igor@igorjs.dev>"]
license = "AGPL-3.0-only"
repository = "https://github.com/igorjs/ward"
