[package]
name = "ward-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ward"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tower = "0.5"
ward-core = { path = "../ward-core" }
