[package]
name = "ward-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
krunvm = ["dep:krun-sys"]

[dependencies]
# async-trait: makes Backend trait object-safe by boxing each async fn's
# future. Used to hold `Arc<dyn Backend>` in SandboxManager so backends
# (libkrun today, Firecracker/Virtualization.framework tomorrow) can be
# swapped without generic infection through every test harness.
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
krun-sys = { version = "1.10", optional = true }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
# tokio-test: assert_ready!, assert_pending!, mock I/O streams, scripted streams.
# Used for testing async code paths that depend on poll semantics.
tokio-test = "0.4"

# pretty_assertions: diff-style output on assert_eq! failures so multi-field
# struct mismatches are readable instead of two opaque blobs.
pretty_assertions = "1"

# rstest: parameterised tests via #[case] attributes and reusable fixtures.
# Cuts boilerplate when many cases share the same arrange-act-assert shape.
rstest = "0.23"

# tempfile: per-test temporary directories. Manager tests use a fresh
# data_dir per test so parallel runs do not interfere.
tempfile = "3"

# proptest: property-based testing. Used alongside the example-based rstest
# suite to generate random inputs and discover edge cases the author did
# not enumerate. Targeted at validators and other pure-function boundaries.
proptest = "1"
