[package]
name = "ward-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Enables real libkrun integration. When off, the stub KrunvmBackend
# returns synthetic IDs and scripted streams — covers tests + dev
# without requiring libkrun installed. When on, `ward-core/build.rs`
# emits the linker directives for libkrun + libkrunfw, and the
# `backend::krun_ffi` module declares the FFI surface directly (no
# bindgen, no krun-sys crate). See adr/003-isolation-backend.md.
krunvm = []

[dependencies]
# async-trait: makes Backend trait object-safe by boxing each async fn's
# future. Used to hold `Arc<dyn Backend>` in SandboxManager so backends
# (libkrun today, Firecracker/Virtualization.framework tomorrow) can be
# swapped without generic infection through every test harness.
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
# OCI image pull. native-tls (not rustls) keeps the dependency tree on
# openssl (Apache-2.0) instead of ring/aws-lc, whose licenses fall
# outside deny.toml's allowlist. default-features off drops the bundled
# test-registry harness we don't ship.
oci-client = { version = "0.17", default-features = false, features = ["native-tls"] }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tar = "0.4"
tonic = "0.14"
# tonic 0.14 split prost integration into a separate crate; the generated
# code (include_proto!) references it.
tonic-prost = "0.14"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
# tonic 0.14 moved prost codegen out of tonic-build into tonic-prost-build.
tonic-prost-build = "0.14"

[dev-dependencies]
# async-trait: integration-test harnesses implement the async VolumeFormatter
# / Backend traits with a no-op, which requires the macro at test-crate scope.
async-trait = "0.1"

# tokio-test: assert_ready!, assert_pending!, mock I/O streams, scripted streams.
# Used for testing async code paths that depend on poll semantics.
tokio-test = "0.4"

# pretty_assertions: diff-style output on assert_eq! failures so multi-field
# struct mismatches are readable instead of two opaque blobs.
pretty_assertions = "1"

# rstest: parameterised tests via #[case] attributes and reusable fixtures.
# Cuts boilerplate when many cases share the same arrange-act-assert shape.
rstest = "0.26"

# tempfile: per-test temporary directories. Manager tests use a fresh
# data_dir per test so parallel runs do not interfere.
tempfile = "3"

# proptest: property-based testing. Used alongside the example-based rstest
# suite to generate random inputs and discover edge cases the author did
# not enumerate. Targeted at validators and other pure-function boundaries.
proptest = "1"
