[package]
name = "ward-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# The binary keeps its short name `wardd` so users invoke the daemon
# exactly the same way (`wardd`, `systemctl start wardd`, etc.). Only
# the *crate* identity changes here — that's what shows up in
# `cargo metadata` and what scripts pass to `cargo test -p`.
[[bin]]
name = "wardd"
path = "src/main.rs"

[dependencies]
ward-core = { path = "../ward-core" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tower = "0.5"
hyper-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# rustix: used to call umask(0o077) at the top of main() so the socket
# bind never creates a permissive socket file in the first place
# (closes the SEC-002 bind-then-chmod window).
rustix = { version = "1", features = ["fs", "process"] }

[dev-dependencies]
# Spawn the compiled `ward` CLI binary and assert on its stdout / stderr /
# exit code. `cargo_bin("ward")` resolves to the workspace-built binary.
assert_cmd = "2"
# Composable matchers for assert_cmd's stdout/stderr assertions
# (str::contains, ends_with, regex, etc.).
predicates = "3"
# Per-test temp dirs that self-clean on drop. Used for per-test socket
# paths and data dirs so E2E tests do not share state.
tempfile = "3"
