[package]
name = "ward-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol server for ward: exposes sandboxed-execution tools to LLM agents (Claude / Cursor / Codex / ...) over stdio JSON-RPC."

# `ward-mcp` is a server binary, not a library — so it can link ward-runtime
# (AGPL) directly without recreating the license-boundary problem that
# ward-client (Apache-2.0 SDK) has. See ADR-016 amendment.
[[bin]]
name = "ward-mcp"
path = "src/main.rs"

[dependencies]
ward-runtime = { path = "../ward-runtime" }
ward-core = { path = "../ward-core" }
bytes = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
