[package]
name = "ward-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded ward runtime: boot libkrun-backed sandboxes in-process, no daemon. See ADR-016."

[features]
default = []
# Mirrors ward-core's `krunvm` feature. When off, the runtime uses the
# stub Backend (synthetic IDs + scripted streams). When on, real
# libkrun integration is linked through. Embedded SDKs that need real
# microVMs enable this; tests / dev environments leave it off.
krunvm = ["ward-core/krunvm"]

[dependencies]
ward-core = { path = "../ward-core" }
tokio = { version = "1", features = ["sync"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
# Integration tests reach into ward-core's pb module to construct
# protobuf request shapes, and implement ImagePuller for the FakePuller
# used to keep lifecycle tests offline.
ward-core = { path = "../ward-core" }
