[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ward-sdk"
version = "0.1.0"
description = "Python client for the ward sandbox daemon (gRPC over Unix socket)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Igor Santos", email = "oss@mail.igorjs.io" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    # gRPC runtime + protobuf. Pin the major; let dependabot drive minor bumps.
    "grpcio>=1.66,<2.0",
    "protobuf>=5.28,<7.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.66,<2.0",  # code-gen from proto at install time
    "pytest>=7,<9",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/igorjs/ward"
Issues = "https://github.com/igorjs/ward/issues"
Source = "https://github.com/igorjs/ward"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ward_sdk"]
